# blockudoku-ai

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  blockudoku-ai.cpp  blockudoku-solver.cpp  blockudoku-solver.h  engine.cpp  engine.h  fitness.cpp
tests/: CMakeLists.txt  boostassert.h  tests.cpp
